# observabilidade-fast-api

./: .gitignore  README.md  catalog-info.yaml  docker-compose.yaml  k6-script.js  pyproject.toml  request-script-8001.sh  request-script-8002.sh  request-script.sh  run_requests.sh  run_traces.sh  trace-8001.sh  trace-8003.sh
etc/grafana/: datasource.yml
etc/jaeger/: config.yaml
etc/loki/: local-config.yaml
etc/otel/: config.yaml  otel-collector-config.yaml
etc/prometheus/: prometheus.yml
etc/tempo/: tempo.yaml
fastapi_app/: main.py
