[tool.poetry]
name = "fastapi-observability-edit"
version = "0.1.0"
description = ""
authors = ["Magno Matos <magnomatos822@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.22.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
